Change links for CONA private Learn

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
-## public Learn West Coast: April 7-8, 2021
-intros: https://docs.google.com/presentation/d/1D9BvZvVtcP_iu4MQW3s4-uNxPkz7Hu0T_BL9c8ZKhCU/edit?usp=sharing
-agenda: https://docs.google.com/spreadsheets/d/1VHIkR7xHR_8Smqx1IfCQmI-Gl7UrJKKSYOkOFwSxyhk/edit?usp=sharing
-feedback: https://forms.gle/5eeHnZwhSY3f7cJx7
-office_hours: "Thursday, April 15 1:30-2:30 pm PT"
+## private Learn CONA: May 17-21, 2021
+intros: https://docs.google.com/presentation/d/1ukcNf6ZSsMA9GqRLPrLUj-RbZ8xIXYpBNt5w-dsyHN0/edit?usp=sharing
+agenda: https://docs.google.com/spreadsheets/d/1B8_8dVqJtCr1-IVCRfc_1DpeO0uURb5rRn6G2_EoN1o/edit#gid=1437022618
+feedback: https://forms.gle/Ar5EWQ1qB8t3nRSL6
+office_hours: ""
