Change links.yml for May 2021 Australia public Learn

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
-## private Learn CONA: May 17-21, 2021
-intros: https://docs.google.com/presentation/d/1ukcNf6ZSsMA9GqRLPrLUj-RbZ8xIXYpBNt5w-dsyHN0/edit?usp=sharing
-agenda: https://docs.google.com/spreadsheets/d/1B8_8dVqJtCr1-IVCRfc_1DpeO0uURb5rRn6G2_EoN1o/edit#gid=1437022618
+## public Learn Sydney: May 26-28, 2021
+intros: https://docs.google.com/presentation/d/1vNXCEA40L9JHN8SGlP-TWvdaW4j9z6JTz-iX-6WlEh8/edit?usp=sharing
+agenda: https://docs.google.com/spreadsheets/d/1x3CGtOnAVZ_8laWyUI1PM8SqZbPbAz-pTEM1pE7Khaw/edit?usp=sharing
 feedback: https://forms.gle/Ar5EWQ1qB8t3nRSL6
-office_hours: ""
+office_hours: "Friday, June 4 10-11 am"
