--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
-## public Learn Sydney: May 26-28, 2021
-intros: https://docs.google.com/presentation/d/1vNXCEA40L9JHN8SGlP-TWvdaW4j9z6JTz-iX-6WlEh8/edit?usp=sharing
-agenda: https://docs.google.com/spreadsheets/d/1_AMyubnr1AGcXhVDHRtoPRw18UWXvcRrkesiiPWZI3w/edit?usp=sharing
+## Nasdaq Group Training July 13-15, 2021
+intros: https://fishtownanalyticsphl-my.sharepoint.com/:p:/g/personal/alexis_wong_baird_fishtownanalyticsphl_onmicrosoft_com/EdgJNlX47EBIgPz9V8qNy5UBK5qEJ5wdiaNjKsKO8dg_BQ?e=fJDgKw
+agenda: https://fishtownanalyticsphl-my.sharepoint.com/:x:/g/personal/alexis_wong_baird_fishtownanalyticsphl_onmicrosoft_com/EVqWxuz4fRFAsjIukKQ0CxkBNkV8m1qZmGinl8QPLMAqaA?e=z9ZVPG
 feedback: https://forms.gle/otqa2xdK7yMqK95c7
 feedback-microsoft-form: https://forms.office.com/r/TbQtTwNQQr
