Edit _data/curriculum/yml to remove sections for days

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -1,34 +1,27 @@
 - day: 1
-  title: "Day One: Foundations"
+  title: "Foundations"
   sessions:
-    - name: Morning
-      lessons:
-        - slug: distributed-norms
-        - slug: who-is-analytics-engineer
-        - slug: dbt-fundamentals
-    - name: Afternoon
-      lessons:
-        - slug: dbt-project-design
-        - slug: testing
-        - slug: sources
-        - slug: docs
-        - slug: assignment
-        - slug: deployment
+    lessons:
+      - slug: distributed-norms
+      - slug: who-is-analytics-engineer
+      - slug: dbt-fundamentals
+      - slug: dbt-project-design
+      - slug: testing
+      - slug: sources
+      - slug: docs
+      - slug: assignment
+      - slug: deployment
 
 - day: 2
-  title: "Day Two: Applications"
+  title: "Applications"
   sessions:
-    - name: Morning
-      lessons:
-        - slug: polish-project
-        - slug: intro-to-jinja
-        - slug: dbtonic-jinja
-        - slug: packages
-        - slug: materializations
-    - name: Afternoon
-      lessons:
-        - slug: incremental
-        - slug: data-warehouses
-        - slug: case-study
-        - slug: techniques-trade
-        - slug: outro
+    lessons:
+      - slug: polish-project
+      - slug: intro-to-jinja
+      - slug: dbtonic-jinja
+      - slug: packages
+      - slug: materializations
+      - slug: incremental
+      - slug: case-study
+      - slug: techniques-trade
+      - slug: outro
