--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -1,7 +1,6 @@
 - day: 1
-  title: "Foundations"
   sessions:
-    - name: Test
+    - name: Foundations
       lessons:
         - slug: distributed-norms
         - slug: who-is-analytics-engineer
@@ -14,9 +13,8 @@
         - slug: deployment
 
 - day: 2
-  title: "Applications"
   sessions:
-    - name: Test 2
+    - name: Applications
       lessons:
         - slug: polish-project
         - slug: intro-to-jinja
