Remove references to Slack, Zoom, and length of training (#187)
* Edit _data/curriculum/yml to remove sections for days

* Playing around with curriculum.yml format

* Remove title from curriculum.yml

* Get rid of name, put back title in curriculum.yml

* Remove Slack and Zoom references from distributed-norms.html

* Remove _data/links.yml and references to it

* Move intros from Who is AE to Distributed norms

* Replace more Zoom and Slack references

* First pass of making slides generic

* Last changes

--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -1,13 +1,11 @@
 - day: 1
-  title: "Day One: Foundations"
+  title: Foundations
   sessions:
-    - name: Morning
+    - name: 
       lessons:
         - slug: distributed-norms
         - slug: who-is-analytics-engineer
         - slug: dbt-fundamentals
-    - name: Afternoon
-      lessons:
         - slug: dbt-project-design
         - slug: testing
         - slug: sources
@@ -16,19 +14,16 @@
         - slug: deployment
 
 - day: 2
-  title: "Day Two: Applications"
+  title: Applications
   sessions:
-    - name: Morning
+    - name: 
       lessons:
         - slug: polish-project
         - slug: intro-to-jinja
         - slug: dbtonic-jinja
         - slug: packages
         - slug: materializations
-    - name: Afternoon
-      lessons:
         - slug: incremental
-        - slug: data-warehouses
         - slug: case-study
         - slug: techniques-trade
         - slug: outro
