--- a/_data/curriculum.yml
+++ b/_data/curriculum.yml
@@ -6,12 +6,14 @@
         - slug: distributed-norms
         - slug: who-is-analytics-engineer
         - slug: dbt-fundamentals
+        - slug: working-group-1
         - slug: dbt-project-design
+        - slug: working-group-2
         - slug: testing
         - slug: sources
         - slug: docs
-        - slug: assignment
         - slug: deployment
+        - slug: working-group-3
 
 - day: 2
   title: Applications
@@ -24,6 +26,5 @@
         - slug: packages
         - slug: materializations
         - slug: incremental
-        - slug: case-study
         - slug: techniques-trade
         - slug: outro
